--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,6 +131,7 @@
     --main-text-color: #414143;
     --green-color-one: #1ca557;
     --green-color-two: #47b076;
+    --button-hover-green: #19954e;
     --background-color-one: #dcdde1;
     --background-color-two: #f5f6fa;
     --background-color-main: #ffff;
