--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -253,6 +253,7 @@
         }
     }
 
+    /*Table*/
     .main-right-bottom-down {
         padding-left: 3.5%;
         width: 96.5%;
@@ -452,7 +453,7 @@
 
 
     .main-right-bottom-two-content button:hover {
-        background: rgb(28, 79, 64);
+        background: var(--button-hover-green);
     }
 
     /*delete confirm popup*/
@@ -462,7 +463,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.1);
         z-index: 2;
         display: flex;
         align-items: center;
@@ -479,7 +480,6 @@
         top: 0;
         text-align: center;
         padding: 0 30px 30px;
-        color: #333;
         transition: transform 0.4s, top 0.4s;
     }
 
@@ -527,6 +527,10 @@
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
     }
 
+    .deletebtn:hover{
+        background: #c62323;
+    }
+
     .cancelbtn {
         width: 150px;
         margin-top: 30px;
@@ -541,12 +545,16 @@
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
     }
 
+    .cancelbtn:hover{
+        background: #a7a1a1 ;
+    }
+
     /*Update popup*/
     .update_click {
         position: fixed;
         top: 0;
         left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.1);
         z-index: 2;
         display: flex;
         align-items: center;
@@ -564,14 +572,13 @@
         position: relative;
         text-align: center;
         padding: 0 30px 30px;
-        color: #333;
         transition: transform 0.4s, top 0.4s;
     }
 
     .popup-form h2 {
-        font-size: 23px;
-        font-weight: 600;
-        margin: 10px 0 10px;
+        font-size: 20px;
+        font-weight: 550;
+        margin: 10px 0 4px;
         margin-top: 25px;
     }
 
@@ -609,7 +616,7 @@
     }
 
     .updatebtn:hover{
-        background:#19954e ;
+        background:var(--button-hover-green) ;
     }
 
     .cancelbtn1 {
@@ -625,13 +632,17 @@
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
     }
 
+    .cancelbtn1:hover{
+        background: #a7a1a1 ;
+    }
+
     .updateData {
         margin-bottom: 25px;
         width: calc(100% / 2 - 10px);
     }
 
     .update-topic-line {
-        width: 93px;
+        width: 90px;
         height: 4px;
         background-color: var(--green-color-one);
         margin-bottom: 15px;
@@ -732,7 +743,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.1);
         z-index: 2;
         display: flex;
         align-items: center;
@@ -750,7 +761,6 @@
         border-radius: 6px;
         text-align: center;
         padding: 0 30px 30px;
-        color: #333;
         transition: transform 0.4s, top 0.4s;
     }
 
@@ -797,7 +807,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.1);
         z-index: 2;
         display: flex;
         align-items: center;
@@ -930,6 +940,7 @@
         position: relative;
         margin-inline-end: auto;
         margin-top: 15px;
+        color: var(--main-text-color);
 
     }
 
@@ -960,7 +971,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.1);
         z-index: 2;
         display: flex;
         align-items: center;
@@ -1053,6 +1064,7 @@
         position: relative;
         margin-inline-end: auto;
         margin-top: 15px;
+        color: var(--main-text-color);
 
     }
 
