--- a/public/css/Component/CenterManager/CenterManager_CenterWorker_Add.css
+++ b/public/css/Component/CenterManager/CenterManager_CenterWorker_Add.css
@@ -267,31 +267,31 @@
         max-width: 700px;
         width: 100%;
         height: max-content;
-        height: 470px;
+        height: 405px;
         background: white;
-        padding: 25px 30px;
-        border-radius: 5px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: var(--box-shadow2);
 
 
     }
 
     .form-title {
-        font-size: 25px;
+        font-size: 19px;
         font-weight: 500;
         position: relative;
+        color: var(--main-text-color);
+        letter-spacing: 0.03rem;
     }
 
     .form-title::before {
         content: '';
         position: absolute;
-        /* left: 0;
-        bottom: 0; */
         height: 4px;
         width: 60px;
         background: var(--green-color-one);
-        margin-top: 33px;
-        margin-bottom: 5px;
+        margin-top: 30px;
+        margin-bottom: 82px;
 
 
     }
@@ -322,19 +322,20 @@
     }
 
     .main-right-bottom-content-content input {
-        height: 45px;
-        width: 94%;
-        outline: none;
+        height: 35px;
+        width: 96%;
         border-radius: 5px;
         border: 1px solid #ccc;
-        padding-left: 15px;
-        font-size: 16px;
-        border-bottom-width: 2px;
-        transition: all 0.3s ease;
+        padding-left: 10px;
+        font-size: 14px;
+        letter-spacing: 0.03rem;
+        background-color: var(--background-color-two);
+        color: var(--main-text-color);
     }
 
     .main-right-bottom-content-content input:focus {
-        border-color: #4dccaa;
+        border-color: var(--green-color-one);
+        outline: none;
     }
 
     .form-button {
@@ -346,13 +347,13 @@
         height: 100%;
         width: 100%;
         outline: none;
-        color: white;
+        color: var(--background-color-main);
         font-size: 18px;
         font-weight: 500;
         border-radius: 5px;
         cursor: pointer;
         border: none;
-        letter-spacing: 1px;
+        letter-spacing: 0.03rem;
         background: var(--green-color-one);
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
 
@@ -361,6 +362,108 @@
     .form-button button:hover {
         background: #19954e;
     }
+
+
+    /* .main-bottom-down {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 96%;
+        color: var(--main-text-color);
+
+    }
+
+    .form-container {
+        max-width: 700px;
+        width: 100%;
+        height: max-content;
+        height: 405px;
+        background: white;
+        padding: 25px;
+        border-radius: 10px;
+        box-shadow: var(--box-shadow2);
+    }
+
+    .form-title {
+        font-size: 19px;
+        font-weight: 500;
+        position: relative;
+        color: var(--main-text-color);
+        letter-spacing: 0.03rem;
+    }
+
+    .form-title::before {
+        content: '';
+        position: absolute;
+        height: 4px;
+        width: 60px;
+        background: var(--green-color-one);
+        margin-top: 30px;
+        margin-bottom: 82px;
+    }
+
+    .form-container form .user-details {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 20px 0 12px 0;
+    }
+
+    .form-button {
+        height: 45px;
+        margin-top: 35px;
+    }
+
+    .details {
+        font-size: 15px;
+        margin-bottom: 7px;
+        letter-spacing: 0.03rem;
+        color: var(--main-text-color);
+
+    }
+
+    .main-right-bottom-content-content input {
+        height: 35px;
+        width: 325px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        padding-left: 10px;
+        font-size: 14px;
+        letter-spacing: 0.03rem;
+        background-color: var(--background-color-two);
+        color: var(--main-text-color);
+    }
+
+    .main-right-bottom-content-content input:focus {
+        border-color: var(--green-color-one);
+        outline: none;
+    }
+
+    .form-button button {
+        height: 100%;
+        width: 100%;
+        outline: none;
+        color: var(--background-color-main);
+        font-size: 18px;
+        font-weight: 500;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
+        letter-spacing: 0.03rem;
+        background: var(--green-color-one);
+    }
+
+    .form-button button:hover {
+        background: var(--button-hover-green)
+    }
+
+    .error-div {
+        height: 6px;
+        font-size: 15px;
+        color: #F13E3E;
+    } */
+
 
     @media (max-width: 584px) {
         .form-container {
@@ -391,14 +494,11 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 100%;
-
 
     }
 
@@ -409,7 +509,6 @@
         border-radius: 6px;
         text-align: center;
         padding: 0 30px 30px;
-        color: #333;
         transition: transform 0.4s, top 0.4s;
     }
 
@@ -436,7 +535,7 @@
         width: 100%;
         margin-top: 30px;
         padding: 10px 0;
-        background: #6fd649;
+        background: var(--green-color-one);
         color: white;
         border: 0;
         outline: none;
