--- a/public/css/Component/Customer/Customer_Request_Completed.css
+++ b/public/css/Component/Customer/Customer_Request_Completed.css
@@ -1,5 +1,4 @@
 .Customer_Request_Completed {
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
 
     * {
         margin: 0;
@@ -15,8 +14,6 @@
     #completed .line {
         background-color: var(--green-color-two);
     }
-
-    .main-right-bottom {}
 
     .table-header {
         grid-template-columns: 10% 11% 9% 11% 12% 13% 12% 12% 10%;
@@ -43,7 +40,13 @@
         border-radius: 50%;
     }
 
+    .fa-eye {
+        font-size: 18px;
+    }
 
+    .bx-info-circle {
+        font-size: 29px;
+    }
 
     /*collect details*/
 
@@ -135,11 +138,12 @@
 
     .collect-details-pop-form-content-labels h3 {
         font-weight: 300;
-        font-size: 14px;
-        margin-bottom: 5%;
+        font-size: 14px !important;
+        margin-bottom: 8%;
         width: 300px;
         text-align: left;
         margin-left: 45%;
+        font-size: 15px;
     }
 
     .collect-details-pop-form-content-right-values {
@@ -147,15 +151,19 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
     }
 
     .collect-details-pop-form-content-right-values-cont h3 {
-        width: 45px;
+        width: 125px;
+        font-size: 15px;
+        color: #767e95;
+        font-weight: 550 !important;
     }
 
     .collect-details-pop-form-content-right-values-cont {
         display: flex;
-        margin-bottom: 4%;
+        margin-bottom: 8%;
     }
 
     .collect-details-pop-form-content-right-values h3 {
@@ -163,174 +171,41 @@
         font-size: 14px;
     }
 
+    .note {
+        max-width: 500px;
+        height: 65px;
+        overflow-y: scroll;
+    }
+
+    @media screen and (max-width:701px) {
+
+        .collect-details-pop-form {
+            width: 550px;
+        }
+
+        .collect-details-pop-form-content {
+            width: 94%;
+        }
+
+        .collect-details-pop-form-close {
+            margin-left: 500px;
+        }
+    }
+
+    @media screen and (max-width:555px) {
+
+        .collect-details-pop-form {
+            width: 430px;
+        }
+
+        .collect-details-pop-form-content {
+            width: 94%;
+        }
+
+        .collect-details-pop-form-close {
+            margin-left: 350px;
+        }
+    }
+
     /*View Collector Pop*/
-
-
-    @media screen and (max-width: 1250px) {
-        .main-left-middle-content h2 {
-            display: none;
-        }
-
-        .main-left-middle-content-line {
-            display: none;
-        }
-
-        .main-left-middle-content img {
-            margin-left: 0;
-        }
-
-        .main-left-bottom-content p {
-            display: none;
-        }
-
-        .main-left-bottom-content {
-            padding-right: 0px;
-        }
-
-        .main-left-top h1 {
-            display: none;
-        }
-
-        .main-left-top img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    @media screen and (max-width: 1118px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
-        }
-
-        .table td {
-            font-size: 12px;
-        }
-
-        .table-header {
-            font-size: 14px;
-        }
-
-        .table-row img {
-            width: 20px;
-            height: 20px
-        }
-
-    }
-
-    @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
-        }
-
-        .main-right-top-one input {
-            width: 20%;
-        }
-
-        .main-right-top-three-content p {
-            font-size: 14px;
-        }
-
-        .line {
-            width: 86px;
-            height: 2px;
-        }
-
-        .table td {
-            font-size: 10px;
-        }
-
-        .table-header {
-            font-size: 12px;
-        }
-
-        .table-row img {
-            width: 17px;
-            height: 17px;
-        }
-    }
-
-    @media screen and (max-width: 692px) {
-        .table td {
-            font-size: 9px;
-        }
-
-        .table-header {
-            font-size: 10px;
-        }
-
-        .table-row img {
-            width: 15px;
-            height: 15px;
-        }
-    }
-
-    @media screen and (max-width:1412px) {
-        .View-content-content-content img {
-            width: 50%;
-            height: 17%;
-        }
-
-        .View-content-content-content h6 {
-            font-size: 16px;
-        }
-
-        .View-content-content-content p {
-            font-size: 14px;
-        }
-
-        .View-content-content-content {
-            margin: 7%;
-        }
-    }
-
-    @media screen and (max-width:1028px) {
-        .View-content-content-content img {
-            width: 40%;
-            height: 13%;
-        }
-
-        .View-content-content-content h6 {
-            font-size: 15px;
-        }
-
-        .View-content h3 {
-            font-size: 18px;
-        }
-
-        .View-content h1 {
-            font-size: 21px;
-        }
-
-        .View-content-content-content p {
-            font-size: 13px;
-        }
-
-        .View-content-content-content {
-            margin: 1;
-        }
-
-        .View-content-img {
-            width: 23px;
-            height: 23px;
-        }
-
-        .View-content-content {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            margin-top: 35px;
-            margin-bottom: -35px;
-        }
-
-        .View-content {
-            overflow: scroll;
-            display: 1px solid red;
-        }
-    }
-
-
 }
