--- a/public/css/Component/Customer/Customer_Request_Main.css
+++ b/public/css/Component/Customer/Customer_Request_Main.css
@@ -77,138 +77,12 @@
         margin-right: 2.5%;
     }
 
-    .dot {
-        width: 11px;
-        height: 11px;
-        border-radius: 50%;
-        background-color: #F13E3E;
-        margin-top: -14px;
-        margin-left: -12px;
-    }
-
-    .main-right-top-notification i {
-        font-size: 29px;
-        cursor: pointer;
-    }
-
-    .notification_popup {
-        height: 0;
-        position: absolute;
-        top: 9%;
-        right: 11%;
-        background-color: var(--background-color-main);
-        border-radius: 10px;
-        padding: 0;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        transition: height 0.6s ease-in;
-        width: 18%;
-        visibility: hidden;
-        opacity: 0;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        overflow: scroll;
-        border: 1px solid #dcdde1;
-    }
-
-    .notification_popup h1 {
-        font-size: 19px;
-        letter-spacing: 0.001rem;
-        margin-top: 5px;
-        margin-left: 8px;
-    }
-
-    .notification_popup.active {
-        height: 200px;
-        padding: 10px;
-        visibility: visible;
-        opacity: 1;
-    }
-
-    .notification {
-        height: 38px !important;
-        margin-top: 10px;
-        display: flex;
-        align-items: center;
-        padding-left: 10px;
-        font-size: 14px;
-        cursor: pointer;
-    }
-
-    .mark_as_read {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-    }
-
-    .notification_cont {
-        overflow: scroll;
-        max-height: 150px;
-    }
-
-    .mark_as_read button {
-        margin-top: 2px;
-        font-size: 13px;
-        text-align: center;
-        margin-top: 4px;
-        font-weight: 700;
-        border: none;
-        background-color: none !important;
-        background: none;
-        cursor: pointer !important;
-        color: var(--main-text-color);
-
-    }
-
-    .mark_as_read .bx {
-        font-size: 26px;
-    }
-
-    .notification:hover {
-        background-color: var(--notification-hover);
-    }
-
-    .notification-green-dot {
-        width: 11px;
-        height: 11px;
-        border-radius: 50%;
-        background-color: var(--green-color-one);
-        margin-right: 10px;
-    }
-
-    .main-right-top-profile {
-        display: flex;
-        margin-right: 40px;
-    }
-
-    .main-right-top-profile img {
-        width: 50px;
-        height: 50px;
-        margin-right: 15px;
-        border-radius: 10px;
-    }
-
-    .main-right-top-profile-cont {
-        margin-top: 7px;
-    }
-
-    .main-right-top-profile-cont h3 {
-        font-size: 18px;
-        letter-spacing: 0.03rem;
-    }
-
-    .main-right-top-profile-cont p {
-        font-size: 14px;
-    }
-
     .main-right-top-two {
         height: 50px;
         display: flex;
         align-items: center;
         padding-left: 33px;
         background-color: var(--background-color-right);
-
     }
 
     .main-right-top-two h1 {
@@ -223,7 +97,6 @@
         padding-left: 34px;
         margin: 0.6%;
         background-color: var(--background-color-right);
-
     }
 
     .main-right-top-three-content {
@@ -255,7 +128,7 @@
     .main-right-bottom-down {
         padding-left: 3.5%;
         width: 96.5%;
-        height: 450px;
+        height: 500px;
         overflow: scroll;
     }
 
@@ -308,6 +181,8 @@
         margin-bottom: 20px;
         margin-top: 10%;
     }
+
+    /*Location Pop*/
 
     .location_pop {
         display: flex;
@@ -363,6 +238,7 @@
         height: 28px;
     }
 
+    /* Personal Details Pop */
 
     .personal-details-popup-box {
         display: flex;
@@ -533,11 +409,6 @@
 
 
     @media screen and (max-width: 1118px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
-        }
-
         .table td {
             font-size: 12px;
         }
@@ -550,18 +421,30 @@
             width: 20px;
             height: 20px;
         }
+
+        .main-right-top-search {
+            margin-left: 40px;
+        }
+
+        .location_pop_content {
+            width: 550px;
+        }
+    }
+
+    @media screen and (max-width: 1108px) {
+        .notification_popup h1 {
+            font-size: 19px;
+            letter-spacing: 0.001rem;
+            margin-top: 5px;
+            margin-left: 8px;
+        }
+
+        .notification_popup {
+            width: 25%;
+        }
     }
 
     @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
-        }
-
-        .main-right-top-one input {
-            width: 20%;
-        }
 
         .main-right-top-three-content p {
             font-size: 14px;
@@ -572,34 +455,68 @@
             height: 2px;
         }
 
-        .table td {
-            font-size: 10px;
+        .location_pop_content {
+            width: 375px;
         }
 
-        .table-header {
-            font-size: 12px;
+        .personal-details-popup-form {
+            width: 550px;
         }
 
-        .table-row img {
-            width: 17px;
-            height: 17px;
-        }
+
     }
 
-    @media screen and (max-width: 692px) {
-        .table td {
-            font-size: 9px;
+    @media screen and (max-width:950px) {
+        .main-right-top-notification {
+            margin-left: 5%;
         }
 
-        .table-header {
-            font-size: 10px;
+        .notification_popup {
+            top: 11%;
+            width: 31%;
+            right: -22%;
         }
 
-        .table-row img {
-            width: 15px;
-            height: 15px;
-
+        .notification_popup h1 {
+            font-size: 19px;
+            letter-spacing: 0.001rem;
+            margin-top: 5px;
+            margin-left: 8px;
         }
 
+        .main-right-top-search {
+            margin-left: 1px;
+        }
+
+        .notification {
+            height: 41px !important;
+            margin-top: 6px;
+            font-size: 13px;
+        }
+
+        .notification_popup h1 {
+            font-size: 17px;
+        }
+
+        .main-right-top-search {
+            margin-left: 40px;
+        }
+
+        .main-right {
+            width: 170% !important;
+        }
+
+    }
+
+    @media screen and (max-width:600px) {
+        .notification_popup {
+            top: 11%;
+            width: 36%;
+            right: -17%;
+        }
+
+        .personal-details-popup-form {
+            width: 550px;
+        }
     }
 }
