--- a/public/css/Component/Customer/Customer_Request_collect.css
+++ b/public/css/Component/Customer/Customer_Request_collect.css
@@ -76,102 +76,6 @@
             margin-right: 2.5%;
         }
 
-        .dot {
-            width: 11px;
-            height: 11px;
-            border-radius: 50%;
-            background-color: #F13E3E;
-            margin-top: -14px;
-            margin-left: -12px;
-        }
-
-        .main-right-top-notification i {
-            font-size: 29px;
-            cursor: pointer;
-        }
-
-        .notification_popup {
-            height: 0;
-            position: absolute;
-            top: 9%;
-            right: 11%;
-            background-color: var(--background-color-main);
-            border-radius: 10px;
-            padding: 0;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: height 0.6s ease-in;
-            width: 18%;
-            visibility: hidden;
-            opacity: 0;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            overflow: scroll;
-            border: 1px solid #dcdde1;
-        }
-
-        .notification_popup h1 {
-            font-size: 19px;
-            letter-spacing: 0.001rem;
-            margin-bottom: 13px;
-            margin-top: 5px;
-            margin-left: 8px;
-        }
-
-        .notification_popup.active {
-            height: 200px;
-            padding: 10px;
-            visibility: visible;
-            opacity: 1;
-        }
-
-        .notification {
-            height: 43px !important;
-            margin-top: 10px;
-            display: flex;
-            align-items: center;
-            padding-left: 10px;
-            font-size: 14px;
-            cursor: pointer;
-        }
-
-        .notification:hover {
-            background-color: var(--notification-hover);
-        }
-
-        .notification-green-dot {
-            width: 11px;
-            height: 11px;
-            border-radius: 50%;
-            background-color: var(--green-color-one);
-            margin-right: 10px;
-        }
-
-        .main-right-top-profile {
-            display: flex;
-            margin-right: 40px;
-        }
-
-        .main-right-top-profile img {
-            width: 50px;
-            height: 50px;
-            margin-right: 15px;
-            border-radius: 10px;
-        }
-
-        .main-right-top-profile-cont {
-            margin-top: 7px;
-        }
-
-        .main-right-top-profile-cont h3 {
-            font-size: 18px;
-            letter-spacing: 0.03rem;
-        }
-
-        .main-right-top-profile-cont p {
-            font-size: 14px;
-        }
-
         .main-bottom {
             display: flex;
             align-items: center;
@@ -236,11 +140,13 @@
         .main-bottom-component-right-component-main {
             display: grid;
             grid-template-columns: 50% 50%;
+
         }
 
         .main-bottom-component-right-component {
             display: flex;
             flex-direction: column;
+
         }
 
         .main-bottom-component-right-component input {
@@ -253,10 +159,14 @@
             font-size: 14px;
             border-bottom-width: 2px;
             transition: all 0.3s ease;
-            margin-bottom: 6px;
             background-color: var(--background-color-two);
             color: var(--main-text-color);
             transition: all 0.6s ease-in;
+            margin-bottom: 10px;
+        }
+
+        .Y {
+            margin-bottom: 15px;
         }
 
         .main-bottom-component-right-component input:focus {
@@ -273,7 +183,6 @@
             padding-left: 15px;
             font-size: 14px;
             border-bottom-width: 2px;
-            margin-bottom: 6px;
             background-color: var(--background-color-two);
             color: var(--main-text-color);
             transition: all 0.6s ease-in;
@@ -296,7 +205,6 @@
             font-size: 14px;
             margin-top: 5px;
             letter-spacing: 0.03rem;
-
         }
 
         .region_p {
@@ -321,7 +229,6 @@
             cursor: pointer;
         }
 
-
         .main-bottom-component-right-component select {
             height: 30px;
             width: 48%;
@@ -338,11 +245,6 @@
             transition: all 0.6s ease;
         }
 
-        .center_dropdown {
-            height: 35px;
-            display: flex;
-            padding-top: 10px;
-        }
 
         .center_dropdown button {
             height: 29px;
@@ -370,7 +272,7 @@
         .Z {
             flex-direction: row;
             align-items: center;
-            margin-top: 10px;
+            margin-top: -15px;
         }
 
         .Z h2 {
@@ -443,8 +345,8 @@
         .main-bottom-component-right-component-button {
             display: flex;
             align-items: center;
+            margin-top: 25px;
             justify-content: center;
-            margin-top: 20px;
         }
 
         .main-bottom-component-right-component-button button {
@@ -687,21 +589,6 @@
 
         }
 
-        @media screen and (max-width: 922px) {
-            .main-bottom-content-bottom-component-img {
-                display: none;
-            }
 
-            .main-bottom {
-                display: flex;
-                align-items: center;
-                justify-content: center
-            }
-
-            .main-bottom-content h1 {
-                margin-bottom: 10px;
-                font-size: 20px !important;
-            }
-        }
     }
 }
