--- a/public/css/Component/Customer/Customer_Editprofile.css
+++ b/public/css/Component/Customer/Customer_Editprofile.css
@@ -71,8 +71,6 @@
         margin-right: 2.5%;
     }
 
-
-
     .main-right-bottom {
         align-items: center;
         justify-content: center;
@@ -85,7 +83,7 @@
 
     .main-right-bottom-content {
         width: 70%;
-        height: 110%;
+        height: 115%;
         box-shadow: var(--box-shadow2);
         border-radius: 10px;
         box-sizing: border-box;
@@ -97,7 +95,7 @@
 
     .main-right-bottom-content {
         display: grid;
-        grid-template-rows: 10% 90%;
+        grid-template-rows: 5% 85% 10%;
         padding-top: 2%;
     }
 
@@ -270,6 +268,139 @@
         letter-spacing: 0.03rem;
         font-weight: bolder;
         transition: background-color 0.6s ease-in;
+    }
+
+    .main-right-bottom-content-delete-account {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main-right-bottom-content-delete-account-cont {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #dcdde1;
+        padding: 10px;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+
+    .main-right-bottom-content-delete-account .fa-trash-can {
+        font-size: 24px;
+        margin-right: 10px;
+    }
+
+    .main-right-bottom-content-delete-account p {
+        font-size: 15px;
+    }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: none;
+    }
+
+    .delete_confirm {
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0);
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    }
+
+    .delete_confirm.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .delete_confirm.active+overlay {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popup {
+        width: 400px;
+        background: white;
+        border-radius: 10px;
+        top: 0;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        box-shadow: var(--box-shadow);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup a {
+        width: auto;
+    }
+
+    .open-popup {
+        visibility: visible;
+        top: 50%;
+    }
+
+    .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+
+
+    .btns {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .delete_confirm {
+        .popup h2 {
+            font-size: 23px;
+            font-weight: 600;
+            margin: 10px 0 10px;
+        }
+
+        .deletebtn {
+            width: 150px;
+            margin-top: 30px;
+            margin-right: 20px;
+            padding: 10px 0;
+            background: rgb(220, 39, 39);
+            color: white;
+            border: 0;
+            outline: none;
+            font-size: 18px;
+            border-radius: 4px;
+            cursor: pointer;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .cancelbtn {
+            width: 150px;
+            margin-top: 30px;
+            padding: 10px 0;
+            background: #bab3b3;
+            color: white;
+            border: 0;
+            outline: none;
+            font-size: 18px;
+            border-radius: 4px;
+            cursor: pointer;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        }
     }
 
     .main-right-bottom-content {
