--- a/public/css/Component/CenterManager/CenterManager_Request_Completed.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Completed.css
@@ -236,9 +236,9 @@
         justify-content: center;
     }
 
-    .collect-details-pop-form-content-right-values-cont h3 {
+    /* .collect-details-pop-form-content-right-values-cont h3 {
         
-    }
+    } */
 
     .collect-details-pop-form-content-right-values-cont {
         display: flex;
