--- a/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
@@ -112,6 +112,19 @@
         margin-top: 40px;
     }
 
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: none;
+    }
+
+
+    /*cancel confirm popup*/
     .cancel-confirm {
         display: none;
         position: fixed;
@@ -119,10 +132,17 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
         align-items: center;
         justify-content: center;
+    }
+
+    .cancel-confirm.active {
+        transform: translate(-50%, -50%) scale(1);
+        background-color: rgba(0, 0, 0, 0);
     }
 
     .cancel-confirm-content {
@@ -130,30 +150,56 @@
         background: white;
         font-family: 'poppins', sans-serif;
         border-radius: 6px;
-        text-align: center;
-        padding: 0 30px 30px;
-        color: #333;
+        padding:30px;
+        position: relative;
+        color: var(--main-text-color);
         transition: transform 0.4s, top 0.4s;
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: center;
     }
 
-    .cancel-confirm-content input {
+    .confirm-content-img{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        cursor: pointer;
+
+    }
+
+    /* .cancel-confirm-content input {
         width: 70%;
         height: 40px;
         margin-bottom: 10px;
-        margin: 12px;
+        margin-top: 12px;
         text-align: center;
         font-size: 20px;
         border-radius: 5px;
         border: 1px solid black;
+    } */
+
+    .cancel-confirm-content input {
+        height: 60px;
+        width: 97.5%;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        padding-left: 10px;
+        margin: 12px 0;
+        font-size: 14px;
+        letter-spacing: 0.03rem;
+        background-color: var(--background-color-two);
+        color: var(--main-text-color);
+    }
+
+    .cancel-confirm-content input:focus {
+        border-color: var(--green-color-one);
+        outline: none;
     }
 
     .cancel-confirm-content h1 {
 
-        font-size: 32px;
+        font-size: 15px;
         font-weight: 500;
     }
 
@@ -164,19 +210,52 @@
         flex-direction: row;
     }
 
-    .cancel-confirm-content button {
-        width: 200px;
-        height: 35px;
-        font-size: 18px;
+    .cancel-confirm-button-container{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center ;
+    }
+
+    .cancel-reason-submit-button {
+        width: 20%;
+        height: 32px;
+        font-size: 14px;
         border-radius: 5px;
         display: flex;
         align-items: center;
         justify-content: center;
         border: none;
         margin-top: 10px;
-        background-color: #74b9ff;
+        background-color: rgb(220, 39, 39);
         cursor: pointer;
+        color: white;
     }
+
+    
+    .cancel-reason-submit-button:hover{
+        background: #c62323;
+    }
+
+    .cancel-reason-cancel-button{
+        width: 20%;
+        height: 32px;
+        font-size: 14px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        margin-left: 10px;
+        margin-top: 10px;
+        background-color: #bab3b3;
+        cursor: pointer;
+        color: white;
+    }
+
+    .cancel-reason-cancel-button:hover{
+        background: #a7a1a1;
+    }
+
 
     .cancel-confirm-content-warning {
         width: 100px;
@@ -185,6 +264,7 @@
         margin-bottom: 10px;
     }
 
+    /*Assign popup*/
     .View {
         display: none;
         position: fixed;
@@ -192,8 +272,8 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
         align-items: center;
         justify-content: center;
     }
@@ -205,7 +285,8 @@
         border-radius: 6px;
         text-align: center;
         padding: 0 30px 30px;
-        color: #333;
+        position: relative;
+        color: var(--main-text-color);
         transition: transform 0.4s, top 0.4s;
         display: flex;
         flex-direction: column;
@@ -214,12 +295,13 @@
     }
 
     .View-content h2 {
-        font-size: 32px;
+        font-size: 18px;
         font-weight: 500;
+        margin-top: 20px;
     }
 
     .View-content h3 {
-        font-size: 24px;
+        font-size: 15px;
         margin-bottom: 25px;
         margin-top: 25px;
         font-weight: 500;
@@ -233,12 +315,17 @@
     }
 
     .View-content-img {
-        width: 27px;
+        /* width: 27px;
         height: 27px;
         cursor: pointer;
         margin-left: 99%;
         margin-top: 10px;
-        align-self: right;
+        align-self: right; */
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        cursor: pointer;
     }
 
     .view_assing {
@@ -263,19 +350,23 @@
     }
 
     .View-content button {
-        height: 41px;
+        height: 35px;
         width: 55%;
         outline: none;
         color: white;
-        font-size: 19px;
+        font-size: 17px;
         font-weight: 500;
         border-radius: 5px;
         cursor: pointer;
         border: none;
         letter-spacing: 1px;
-        background: #1B6652;
+        background: var(--green-color-one);
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
         margin-top: 10px;
+    }
+
+    .View-content button:hover{
+        background: var(--button-hover-green);
     }
 
     #dropdown {
@@ -292,7 +383,7 @@
         cursor: pointer;
         border-radius: 10px;
         text-align: center;
-        margin-bottom: 25px;
+        margin-bottom: 17px;
     }
 
     #dropdown:hover {
