--- a/public/css/Component/Customer/Customer_Main.css
+++ b/public/css/Component/Customer/Customer_Main.css
@@ -157,12 +157,18 @@
     }
 
     .dot {
-        width: 11px;
-        height: 11px;
+        width: 15.5px;
+        height: 15.5px;
         border-radius: 50%;
         background-color: #F13E3E;
-        margin-top: -14px;
-        margin-left: -12px;
+        margin-top: -11px;
+        margin-left: -15px;
+        color: var(--background-color-main);
+        font-size: 11px;
+        font-weight: 501;
+        box-sizing: border-box;
+        padding-left: 4.6px;
+        padding-top: 1.8px;
     }
 
     .main-right-top-notification i {
@@ -237,7 +243,11 @@
         background: none;
         cursor: pointer !important;
         color: var(--main-text-color);
+        margin-left: 5px;
+    }
 
+    .mark_as_read button:hover {
+        color: var(--button-hover-green);
     }
 
     .mark_as_read .bx {
@@ -254,6 +264,10 @@
         border-radius: 50%;
         background-color: var(--green-color-one);
         margin-right: 10px;
+    }
+
+    .notification_right p {
+        font-size: 13px;
     }
 
     .main-right-top-profile {
